tests/errors/syn_err06.kt
// misplaced operator error
1 + * 2